--- a/public/css/template.css
+++ b/public/css/template.css
@@ -173,15 +173,15 @@ header .fa {
     font-weight: 600;
     border-radius: 100px;
     padding: 8px 35px;
-    background-color: #b4dc2d;
-    border-color: #b4dc2d;
-    border: 2px solid #b4dc2d;
+    background-color: #2d9ddc;
+    border-color: #2d9ddc;
+    border: 2px solid #f8f9fa;
 }
 
 .jumbotron .btn-success:hover {
     color: #fff;
     background-color: transparent;
-    border: 2px solid #b4dc2d;
+    border: 2px solid #2d9ddc;
 }
 
 .jumbotron h2 {
@@ -379,8 +379,8 @@ header .fa {
     padding: 12px 35px;
     letter-spacing: 1px;
     border-radius: 0;
-    background-color: #b4dc2d;
-    border-color: #b4dc2d;
+    background-color: #2d9ddc;
+    border-color: #2d9ddc;
     text-transform: uppercase;
 }
 
@@ -388,8 +388,8 @@ header .fa {
     color: #fff;
     font-size: 18px;
     padding: 5px 20px;
-    background-color: #b4dc2d;
-    border-color: #b4dc2d;
+    background-color: #2d9ddc;
+    border-color: #2d9ddc;
     border-radius: 100px;
 }
 
@@ -675,8 +675,8 @@ header .fa {
 
 .section-6 .btn-info:hover {
     color: #ffffff;
-    background-color: #b4dc2d;
-    border: 1px solid #b4dc2d;
+    background-color: #2d9ddc;
+    border: 1px solid #2d9ddc;
 }
 
 .section-6 input {
