--- a/public/css/template.css
+++ b/public/css/template.css
@@ -238,7 +238,6 @@ header .fa {
     padding-bottom: 100px;
 }
 
-.section-2 .fa {
     color: #c2c2c2;
     font-size: 30px;
     text-align: center;
@@ -817,6 +816,7 @@ header .fa {
     padding-top: 60px;
     padding-bottom: 60px;
     background-color: #fff;
+    margin: 50px 450px 50px 450px;
 }
 
 #about-us h3 {
