mise en place du système de mail de contact via phpmailer

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,7 +2,7 @@
     margin-left: 100px;
 }
 
-.chapterspage, .onechapter {
+.chapterspage, .onechapter, .about {
     margin: 50px 450px 50px 450px;
 }
 
