--- a/public/css/template.css
+++ b/public/css/template.css
@@ -30,7 +30,7 @@ a {
 }
 
 a:hover {
-    color: #000;
+    color: #2d9ddc;
     text-decoration: none;
 }
 
@@ -236,11 +236,6 @@ header .fa {
 .section-2 {
     padding-top: 70px;
     padding-bottom: 100px;
-}
-
-    color: #c2c2c2;
-    font-size: 30px;
-    text-align: center;
 }
 
 .section-2 h3 {
@@ -759,7 +754,7 @@ header .fa {
 
 .footer-copyright {
     position: relative;
-    background-image: url("../images/footer-bg.jpg");
+    background-image: url("../image/index-alaska.jpg");
     background-repeat: no-repeat;
     background-position: top;
     background-size: cover;
@@ -804,7 +799,7 @@ header .fa {
 }
 
 .page-footer ul > li a:hover {
-    color: #8dc63f;
+    color: #2d9ddc;
 }
 
 /*===============================
@@ -962,6 +957,10 @@ header .fa {
     border-radius: 0;
     margin-bottom: 16px;
     border: 1px solid #acacac;
+}
+
+#contact input[type="checkbox"] {
+    height: initial;
 }
 
 textarea.form-control {
@@ -1527,7 +1526,7 @@ textarea.form-control {
     -webkit-justify-content: center;
     -ms-flex-pack: center;
     justify-content: center;
-    margin: 0 px;
+    margin: 0;
     width: 116px;
     height: 31px;
     text-decoration: none;
