--- a/public/css/template.css
+++ b/public/css/template.css
@@ -30,7 +30,7 @@ a {
 }
 
 a:hover {
-    color: #2d9ddc;
+    color: #8dc63f;
     text-decoration: none;
 }
 
@@ -173,15 +173,15 @@ header .fa {
     font-weight: 600;
     border-radius: 100px;
     padding: 8px 35px;
-    background-color: #2d9ddc;
-    border-color: #2d9ddc;
-    border: 2px solid #f8f9fa;
+    background-color: #b4dc2d;
+    border-color: #b4dc2d;
+    border: 2px solid #b4dc2d;
 }
 
 .jumbotron .btn-success:hover {
     color: #fff;
     background-color: transparent;
-    border: 2px solid #2d9ddc;
+    border: 2px solid #b4dc2d;
 }
 
 .jumbotron h2 {
@@ -373,8 +373,8 @@ header .fa {
     padding: 12px 35px;
     letter-spacing: 1px;
     border-radius: 0;
-    background-color: #2d9ddc;
-    border-color: #2d9ddc;
+    background-color: #b4dc2d;
+    border-color: #b4dc2d;
     text-transform: uppercase;
 }
 
@@ -382,9 +382,9 @@ header .fa {
     color: #fff;
     font-size: 18px;
     padding: 5px 20px;
-    background-color: #2d9ddc;
-    border-color: #2d9ddc;
-    border-radius: 100px;
+    background-color: #b4dc2d;
+    border-color: #b4dc2d;
+    border-radius: 100px
 }
 
 .section-4 .btn-success:hover,
@@ -660,6 +660,7 @@ header .fa {
     background: #000;
 }
 
+
 .section-6 .btn-info:not(:disabled):not(.disabled):active,
 .section-3 .btn-info:hover {
     color: #000;
@@ -669,8 +670,8 @@ header .fa {
 
 .section-6 .btn-info:hover {
     color: #ffffff;
-    background-color: #2d9ddc;
-    border: 1px solid #2d9ddc;
+    background-color: #b4dc2d;
+    border: 1px solid #b4dc2d;
 }
 
 .section-6 input {
@@ -771,7 +772,7 @@ header .fa {
 }
 
 .footer-copyright p a {
-    color: #2d9ddc;
+    color: #8dc63f;
 }
 
 .page-footer img {
@@ -799,7 +800,7 @@ header .fa {
 }
 
 .page-footer ul > li a:hover {
-    color: #2d9ddc;
+    color: #8dc63f;
 }
 
 /*===============================
@@ -937,8 +938,8 @@ header .fa {
 }
 
 #contact .btn-primary:hover {
-    background-color: #2d9ddc;
-    border-color: #2d9ddc;
+    background-color: #b4dc2d;
+    border-color: #b4dc2d;
 }
 
 #contact .form-group {
