--- a/public/css/template.css
+++ b/public/css/template.css
@@ -2438,7 +2438,7 @@ textarea.form-control {
     .navbar-dark .navbar-toggler {
         color: rgb(0, 0, 0);
         border-color: rgba(255, 255, 255, 0.1);
-        background: #b4dc2d;
+        background: #2d9ddc;
     }
     .navbar-toggler {
         padding: .15rem .25rem;
